# halfshell

./: .gitignore  README.md  configure.ac
src/: Makefile.am  builtins.c  builtins.h  constants.h  display.c  display.h  main.c  parsing.c  parsing.h  process.c  process.h
src/builtins/: builtins.c  cd.c  echo.c  exit.c  pwd.c
